k8s/django/service-skyloov.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-skyloov-service
  namespace: skyloov
spec:
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: django-skyloov
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
