k8s/django/ingress-skyloov.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-skyloov-ingress
  namespace: skyloov
spec:
#  ingressClassName: nginx
  rules:
  - host: skyloov.youcefi-yassine.com
    http:
      paths:
      - backend:
          service:
            name: django-skyloov-service
            port:
              number: 8000
        path: /
        pathType: Prefix
